[gd_scene load_steps=9 format=3 uid="uid://b11a8c65psyr4"]

[ext_resource type="FontFile" uid="uid://bfidqmd73apo3" path="res://Assets/Fonts/Kenney Pixel.ttf" id="1_0gpfh"]
[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_q5v7e"]
[ext_resource type="PackedScene" uid="uid://h4lhs12hvb3t" path="res://Scenes/In_Game_UI/in_game_ui.tscn" id="3_yqxqx"]
[ext_resource type="PackedScene" uid="uid://dbbso5uwwuxgj" path="res://Scenes/High_Scores/high_score.tscn" id="4_o8tv0"]
[ext_resource type="PackedScene" uid="uid://ivmvqhrc0soo" path="res://Scenes/Lose_Screen/lose_screen.tscn" id="7_dpgq1"]
[ext_resource type="PackedScene" uid="uid://cpfwqb027evqr" path="res://Scenes/PauseMenu/pause_menu.tscn" id="8_6ua15"]
[ext_resource type="PackedScene" uid="uid://c1ijswxhol7ff" path="res://Scenes/MainMenu/main_menu.tscn" id="9_wio4e"]

[sub_resource type="Theme" id="Theme_sxe1w"]
default_font = ExtResource("1_0gpfh")
default_font_size = 32

[node name="UI" type="CanvasLayer" groups=["UI"]]
process_mode = 3
layer = 2
script = ExtResource("1_q5v7e")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_sxe1w")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MainMenu" parent="Control/MarginContainer" instance=ExtResource("9_wio4e")]
layout_mode = 2

[node name="HighScore" parent="Control/MarginContainer" instance=ExtResource("4_o8tv0")]
visible = false
layout_mode = 2

[node name="InGameUI" parent="Control/MarginContainer" instance=ExtResource("3_yqxqx")]
visible = false
layout_mode = 2

[node name="PauseMenu" parent="Control/MarginContainer" instance=ExtResource("8_6ua15")]
visible = false
layout_mode = 2

[node name="LoseScreen" parent="Control/MarginContainer" instance=ExtResource("7_dpgq1")]
visible = false
layout_mode = 2
